fixed spacing issue on about page

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -131,3 +131,6 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); // Increase box-shadow on hover
   }
 }
+.resume-button {
+  margin-right: 10px;
+}
